--- a/package.json
+++ b/package.json
@@ -2,19 +2,15 @@
   "name": "sistema-avaliacoes-backend",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  {
+  "name": "sistema-avaliacoes-backend",
+  "version": "1.0.0",
+  "main": "src/server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node src/server.js"
   },
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^4.21.2",
-    "mongoose": "^8.1.0",
-    "pg": "^8.16.3"
-  },
-  "engines": {
-    "node": "18.x"
+    "express": "^4.18.2",
+    "cors": "^2.8.5"
   }
 }
