--- a/package.json
+++ b/package.json
@@ -1,13 +1,6 @@
 {
-  "name": "sistema-avaliacoes-backend",
-  "version": "1.0.0",
-  "description": "Backend para sistema de avaliações",
-  "main": "src/server.js",
+  "main": "server.js", // Ou app.js, index.js, etc.
   "scripts": {
-    "start": "node src/server.js"
-  },
-  "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5"
+    "start": "node server.js" // Este comando é executado no deploy
   }
 }
