--- a/package.json
+++ b/package.json
@@ -1,6 +1,13 @@
 {
-  "main": "server.js", // Ou app.js, index.js, etc.
+  "name": "sistema-avaliacoes-backend",
+  "version": "1.0.0",
+  "description": "Backend para sistema de avaliações",
+  "main": "src/server.js",
   "scripts": {
-    "start": "node server.js" // Este comando é executado no deploy
+    "start": "node src/server.js"
+  },
+  "dependencies": {
+    "express": "^4.18.2",
+    "cors": "^2.8.5"
   }
 }
