--- a/package.json
+++ b/package.json
@@ -1,13 +1,18 @@
 {
   "name": "sistema-avaliacoes-backend",
   "version": "1.0.0",
-  "description": "Backend para sistema de avaliações",
-  "main": "src/server.js",
+  "description": "",
+  "main": "server.js",
   "scripts": {
-    "start": "node src/server.js"
+    "start": "node server.js"
   },
+  "author": "",
+  "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
-    "cors": "^2.8.5"
+    "mongoose": "^8.1.0"
+  },
+  "engines": {
+    "node": "18.x"
   }
 }
