--- a/package.json
+++ b/package.json
@@ -1,19 +1,18 @@
 {
   "name": "sistema-avaliacoes-backend",
   "version": "1.0.0",
-  "description": "Backend para sistema de avaliações",
-  "main": "src/server.js",
+  "main": "server.js",
+  "type": "commonjs",
   "scripts": {
-    "start": "node src/server.js"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "dotenv": "^17.2.1",
-    "express": "^4.18.2",
-    "mongoose": "^8.1.0"
+    "start": "node server.js"
   },
   "engines": {
     "node": "18.x"
+  },
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "mongoose": "^8.5.0"
   }
 }
