--- a/package.json
+++ b/package.json
@@ -30,4 +30,9 @@
   "devDependencies": {
     "nodemon": "^3.1.0"
   }
+  {
+  "scripts": {
+    "import:adapt:file": "node scripts/import_from_adapt.js --file .\\adapt_items.json",
+    "import:adapt:urls": "node scripts/import_from_adapt.js --urls"
+  }
 }
